digital_currencies + inflation update + edits

--- a/notes/index.html
+++ b/notes/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Краткие заметки в систематическом порядке" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-16" />
-        <meta property="og:article:modified_time" content="2020-11-02" />
+        <meta property="og:article:modified_time" content="2021-01-26" />
 <meta property="og:title" content="Заметки о финансах" />
 <meta property="og:url" content="https://onfin.github.io/notes" />
 
@@ -66,29 +66,32 @@
 <li><a href="/notes/finplan">Личный финансовый план — не нужен</a></li>
 <li><a href="/notes/lifeprofile">Финансовый профиль жизни обычного человека и инвестора</a></li>
 </ol>
-<h2 id="_2">Фондовый рынок</h2>
+<h2 id="_2">Инвестиционный портфель</h2>
 <ol>
-<li><a href="/notes/marketprice">Откуда берётся рыночная цена и доходность акций</a></li>
 <li><a href="/notes/diversification_math">Математика диверсификации: портфельный эффект и ребалансировка между акциями</a></li>
 <li><a href="/notes/diversification_math2">Математика диверсификации-2: доходность и риск</a></li>
 <li><a href="/notes/mpt">(Не)Математика диверсификации-3: современная теория портфеля</a></li>
 <li><a href="/notes/factors">Инвестиционные факторы</a></li>
 <li><a href="/notes/volatility">Волатильность как мера риска</a></li>
-<li><a href="/notes/inflation">Инфляция</a></li>
 <li><a href="/notes/bonds_in_portfolio">Облигации в инвестиционном портфеле</a></li>
 <li><a href="/notes/markettiming">Выбор времени для покупки акций</a></li>
 <li><a href="/notes/contributions">Проблема довложений</a></li>
-<li><a href="/notes/market_to_gdp">Рост ВВП, прибыли компаний, капитализация и доходность рынка акций</a></li>
 <li><a href="/notes/holywars">О спорных терминах</a></li>
 </ol>
-<h2 id="_3">Экономические этюды</h2>
+<h2 id="_3">Макроэкономика, денежное обращение и механика рынков</h2>
+<ol>
+<li><a href="/notes/marketprice">Откуда берётся рыночная цена и доходность акций</a></li>
+<li><a href="/notes/inflation">Инфляция</a></li>
+<li><a href="/notes/market_to_gdp">Рост ВВП, прибыли компаний, капитализация и доходность рынка акций</a></li>
+</ol>
+<h2 id="_4">Экономические этюды</h2>
 <ol>
 <li><a href="/notes/fairprice">Справедливая цена</a></li>
 <li><a href="/notes/workersfactories">Фабрики — рабочим</a></li>
 <li><a href="/notes/piketti">Полезно решать дифференциальные уравнения: Тома Пикетти</a></li>
 <li><a href="/notes/piketti2">Социальное неравенство и налоги</a></li>
 </ol>
-<h2 id="_4">Обо мне</h2>
+<h2 id="_5">Обо мне</h2>
 <ol>
 <li><a href="/notes/aboutme">Кто я и как дошёл до жизни такой</a></li>
 <li><a href="/notes/system">Как организованы мои финансы</a></li>
