--- a/notes/marketprice.html
+++ b/notes/marketprice.html
@@ -112,7 +112,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/lifeprofile"> &lt;&lt; Финансовый профиль жизни обычного человека и инвестора </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/diversification_math"> Математика диверсификации: портфельный эффект и ребалансировка между акциями &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/notes/holywars"> &lt;&lt; О спорных терминах </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/inflation"> Инфляция &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
