--- a/notes/system.html
+++ b/notes/system.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Схема денежных потоков, используемые банки, карты, брокеры и сервисы, реферальные ссылки" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-18" />
-        <meta property="og:article:modified_time" content="2021-01-08" />
+        <meta property="og:article:modified_time" content="2021-01-25" />
 <meta property="og:title" content="Как организованы мои финансы" />
 <meta property="og:url" content="https://onfin.github.io/notes/system" />
 
@@ -54,7 +54,7 @@
         <h1>Как организованы мои финансы</h1>
         <div class="meta">
                 <p class="description">Схема денежных потоков, используемые банки, карты, брокеры и сервисы, реферальные ссылки</p>
-                <p> Обновлено: <time>2021-01-08</time> </p>
+                <p> Обновлено: <time>2021-01-25</time> </p>
 
         </div>
     </header>
@@ -169,14 +169,13 @@
 
 <h2 id="_10">Брокерский счёт в Промсвязьбанке</h2>
 <p>В 2015-м это был самый дешёвый вариант без конкурентов вообще. Единственная комиссия — 0,05% от суммы сделки. Сейчас банк стал военно-государственным, стало невозможно купить иностранные бумаги (ETF от Финекса, Яндекс, Русал, Русагро...), начали брать депозитарную комиссию 0,1%г от стоимости активов (это коммиссия НРД, на самом деле, честному брокеру противоествественно её <em>не</em> брать).</p>
-<p><strong>В настоящее время Сбербанк не дороже, но гораздо удобнее.</strong></p>
 <p>Единственный брокер из мне известных, который по договору не имеет права самостоятельно распоряжаться ценными бумагами клиентов. Все остальные могут их одалживать, получая дополнительную доходность за счёт повышенных рисков для клиентов (клиенты получают в лучшем случае отсутствие депозитарной комиссии, но Альфа-директ, например, берёт и её).</p>
 <p>Брокер крайне низкотехнологичный: личного кабинета нет, отчёты — в экселе на почту. Мобильного приложения до недавнего времени не было, все операции — через Квик.</p>
 <p>Дивиденды и купоны с брокерского счёта (но не ИИС) можно получать на банковский счёт. Я их отправляю сразу в Открытие по СБП, других бесплатных способов вывода безнала из Промсвязи нет.</p>
 <div id="vtb-iis"></div>
 
 <h2 id="_11">Индивидуальный инвестиционный счёт в ВТБ</h2>
-<p>На момент открытия это был единственный приличный брокер, присылающий дивиденды с ИИС на банковский счёт. <strong>Сейчас это возможно и в Сбербанке.</strong> Брокер чудовищно бюрократичный: любое действие — это подписание кипы бумаг в офисе. По умолчанию включено маржинальное кредитование — можно случайно купить бумаг на большую сумму, чем у вас есть денег и начать отстёгивать брокеру 15%г. Предупреждений об этом нет, доступный остаток денег отображается невнятно — я так попадаюсь практически каждую закупку.</p>
+<p>На момент открытия это был единственный приличный брокер, присылающий дивиденды с ИИС на банковский счёт. Брокер чудовищно бюрократичный: любое действие — это подписание кипы бумаг в офисе. По умолчанию включено маржинальное кредитование — можно случайно купить бумаг на большую сумму, чем у вас есть денег и начать отстёгивать брокеру 15%г. Предупреждений об этом нет, доступный остаток денег отображается невнятно — я так попадаюсь практически каждую закупку.</p>
 <p>Открыт счёт типа А — с вычетом на взносы. В конце года я считаю свой облагаемый НДФЛ доход и отправляю эту сумму на ИИС (max 400Кр, конечно) — чтобы налог не платить или вернуть, если его уже удержали. Этот тип счёта также позволяет не платить налог на спекулятивный доход, пока счёт не закрыт.</p>
 <p>Дивиденды и купоны выводятся на накопительный счёт с 4%г на ежедневный остаток. Здесь хранится также специальный резерв на случае потери доступа к основному накопительному счёту в Открытии. Вывести безнал с ВТБ можно по СБП или стягиванием с дебетовых карт.</p>
 <div id="ib"></div>
@@ -224,7 +223,7 @@
 </table>
 <p>Уходит без проблем. Банку нужно прислать брокерский договор и уведомление об открытии счёта (запрашивал у техподдержки на ib_tallinn@interactivebrokers.ee, отправили в тот же день).</p>
 <p>Выводить рекомендуют в долларах: с рублёвыми платежами от нерезидентов всё очень зарегулировано и они обычно возвращаются обратно. Я даже не пытался.</p>
-<p>Брокер хорош очень дешёвым маржинальным кредитованием, что позволяет не держать крупных резервов, а, в случае острой надобности, вывести деньги под залог акций (дивидендная доходность всё равно выше стоимости кредита, но осторожность и предусмотрительность требуются).</p>
+<p>Брокер хорош очень дешёвым маржинальным кредитованием (ставка ФРС + 1,5%г), что позволяет не держать крупных резервов, а, в случае острой надобности, вывести деньги под залог акций (дивидендная доходность всё равно выше стоимости кредита, но осторожность и предусмотрительность требуются).</p>
         <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
     <aside>
