--- a/notes/volatility/index.html
+++ b/notes/volatility/index.html
@@ -116,7 +116,7 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/factors"> &lt;&lt; Инвестиционные факторы </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/inflation"> Инфляция &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/notes/factors"> &lt;&lt; Инвестиционные факторы </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/bonds_in_portfolio"> Облигации в инвестиционном портфеле &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
