--- a/notes/fairprice.html
+++ b/notes/fairprice.html
@@ -91,7 +91,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/holywars"> &lt;&lt; О спорных терминах </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/workersfactories"> Фабрики — рабочим &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/notes/market_to_gdp"> &lt;&lt; Рост ВВП, прибыли компаний, капитализация и доходность рынка акций </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/workersfactories"> Фабрики — рабочим &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
