--- a/notes/inflation.html
+++ b/notes/inflation.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Что такое инфляция, её составляющие, как она измеряется, и почему это всё неправильно" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-02-01" />
-        <meta property="og:article:modified_time" content="2020-08-19" />
+        <meta property="og:article:modified_time" content="2021-01-25" />
 <meta property="og:title" content="Инфляция" />
 <meta property="og:url" content="https://onfin.github.io/notes/inflation" />
 
@@ -54,7 +54,7 @@
         <h1>Инфляция</h1>
         <div class="meta">
                 <p class="description">Что такое инфляция, её составляющие, как она измеряется, и почему это всё неправильно</p>
-                <p> Обновлено: <time>2020-08-19</time> </p>
+                <p> Обновлено: <time>2021-01-25</time> </p>
 
         </div>
     </header>
@@ -81,9 +81,18 @@
 <p><strong>Предпринимательские риски.</strong> Опять же, усиление госрегулирования, коррупция, наезды бандитов и силовиков, в целом рост неопределённости в экономике из-за неумелого государственного вмешательства или внешнеполитической обстановки — приводят как к росту издержек предприятия, так и к росту требуемой от него доходности для владельца, что приводит и к росту цен, и к падению предложения с последущим ростом цен (недостаточно доходные вследствие этого фактора предприятия закрываются или просто не открываются даже при наличии неудовлетворённого платёжеспособного спроса).</p>
 <p><strong>Сезонность и неурожаи</strong> влияют на цены сельхозпродукции и её производных.</p>
 <p><strong>Научно-технический прогресс</strong> действует в противоположном направлении, приводя к постоянному снижению цен на товары с аналогичными потребительскими свойствами.</p>
-<p><strong>Структура потребления.</strong> Важнейший параметр, который довольно слабо связан с уровнем цен, но учитывается в ИПЦ и входит в «офциальную инфляцию».</p>
-<p>При росте доходов люди, грубо говоря, начинают покупать меньше круп и макарон, а больше мяса и овощей. Веса в ИПЦ смещаются в их сторону и даже при неизменных ценах ИПЦ растёт. Если мы посмотрим на индексы цен на отдельные товары в сравнении с ИПЦ (ссылки в начале статьи), то увидим, что до 2014г ИПЦ рос гораздо быстрее средних цен — именно из-за этого фактора. С 2014г ситуация обратная: люди беднеют и с мяса и овощей переходят обратно на кашу. «Инфляция» оказывается ниже роста цен. Центробанку такой «победой над инфляцией» гордиться совершенно нечего (впрочем, у него есть другие поводы, вполне заслуженные).</p>
-<p>В Европе тоже интересная ситуация. Рост экологического сознания и идеи «осознанного потребления» захватывают массы. Массы перестают менять телефоны/бытовую технику каждый год, отказываются от лишних и недолговечных вещей, и, при активном содействии городов, пересаживаются с автомобилей в общественный транспорт, увеличивают сбережения. Экономика в человеческом смысле оздоравливается, но ИПЦ показывает дефляцию, с которой отцы завещали бороться до последней капли чернил в печатном станке.</p>
+<p><strong>Структура потребления</strong> тоже влияет на ИПЦ т.к. он представляет собой сумму относительных изменений цен товаров и услуг, взвешенную по их доле в потребительской корзине за 2 года, отчётный и предыдущий (<a href="http://docs.cntd.ru/document/420248337">методика расчёта</a>). Это создаёт два эффекта. Первый, очевидный, — если доля товара/услуги в среднестатистической потребительской корзине невелика, изменение цены на него не оказывает значимого эффекта на ИПЦ. Второй более интересный. Рассмотрим очень простую «экономику» в которой всего 2 потребительских товара, условные «макароны» и условное «мясо». В начальный момент времени они покупаются в равном объёме, по 50 денежных единиц на каждый. При этом цена на макароны растёт со скоростью 10%г, а на мясо — 15%г. Как будет выглядеть ИПЦ в этом случае?</p>
+<p>В первом случае, когда рост номинальных зарплат опережает скорость удорожания потребительской корзины, население переходит на более дорогое и быстро дорожающее мясо. Это разгоняет наблюдаемую инфляцию и сдерживает рост реальных зарплат. В итоге за 5 лет качество жизни меняется драматически, хотя реальные зарплаты остаются почти неизменными. Поэтому нельзя впрямую сопоставлять реальные зарплаты с качеством жизни: для этого нужно анализировать структуру потребительской корзины.</p>
+<div id="myExcelDiv" style="width: 100%; height: 200px"></div>
+
+<script async defer type="text/javascript" src="https://onedrive.live.com/embed?resid=180B7DCBE14D0A9B%21131&authkey=%21AFPIwNLqiZvpmTY&em=3&wdItem=%22'Sheet1'!A1%3AJ7%22&wdDivId=%22myExcelDiv%22&wdDownloadButton=1&wdHideGridlines=1&wdActiveCell=%22'Sheet1'!A1%22&wdAllowInteractivity=0&wdAllowTyping=1"></script>
+
+<p>Во втором случае, рассмотрим отставание номинальных зарплат от стоимости потребительской корзины. В этом случае население вынуждено переходить на медленнее дорожающие макароны, что сдерживает регистрируемую инфляцию. Качество жизни ухудшается, но реальные зарплаты при этом вполне себе могут держаться на одном уровне. Поэтому нельзя впрямую сопоставлять реальные зарплаты с качеством жизни.</p>
+<div id="myExcelDiv2" style="width: 100%; height: 200px"></div>
+
+<script type="text/javascript" src="https://onedrive.live.com/embed?resid=180B7DCBE14D0A9B%21131&authkey=%21AFPIwNLqiZvpmTY&em=3&wdItem=%22'Sheet1'!A10%3AJ16%22&wdDivId=%22myExcelDiv2%22&wdDownloadButton=1&wdHideGridlines=1&wdActiveCell=%22'Sheet1'!A10%22&wdAllowInteractivity=0&wdAllowTyping=1"></script>
+
+<p>Обратите внимание, что при абсолютно идентичных ценах мы имеем разные значения ИПЦ в зависимости от структуры потребления и её динамики.</p>
 <h2 id="_2">Монетарная, немонетарная и структурная инфляция</h2>
 <p>Важно понимать, что только рост денежной массы и ненулевая стоимость денег — монетарные факторы — действуют постоянно и ведут к постоянному росту цен. Все остальные факторы действуют разово: изменилась цена сырья, стоимость кредитов, налоговая нагрузка — предприятие учло это изменение в цене и всё, дальнейшего роста нет. С течением времени эти разовые факторы разворачиваются и цены снижаются обратно. Так что в долгосрочном периоде на цены влияет только монетарная составляющая.</p>
 <p>Поэтому я предпочитаю только её называть инфляцией. К тому же, только монетарные факторы действуют на всю экономику равномерно и транслируются в пропорциональный рост выручки и прибыли компаний. Так что когда говорят, что акции защищают от инфляции — имеется в виду только эта её часть, и то частично. Потому что рост стоимости денег ведёт к росту стоимости кредитования — а это уже дополнительные издержки, которые акционеры вынуждены нести (спрос в эти моменты тоже падает из-за снижения кредитования и переложить эти издержки на потребителя уже не получится).</p>
@@ -127,7 +136,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/volatility"> &lt;&lt; Волатильность как мера риска </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/bonds_in_portfolio"> Облигации в инвестиционном портфеле &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/notes/marketprice"> &lt;&lt; Откуда берётся рыночная цена и доходность акций </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/market_to_gdp"> Рост ВВП, прибыли компаний, капитализация и доходность рынка акций &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
