--- a/notes/myportfolio.html
+++ b/notes/myportfolio.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="По каким правилам я формирую свой портфель ценных бумаг и почему именно так. Из каких бумаг он состоит. Каким образом эти бумаги распределены между брокерами и почему. Возможные направления развития потрфеля." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-11" />
-        <meta property="og:article:modified_time" content="2021-01-05" />
+        <meta property="og:article:modified_time" content="2021-01-28" />
 <meta property="og:title" content="Мой портфель ценных бумаг и стратегия использования брокерских счетов" />
 <meta property="og:url" content="https://onfin.github.io/notes/myportfolio" />
 
@@ -54,7 +54,7 @@
         <h1>Мой портфель ценных бумаг и стратегия использования брокерских счетов</h1>
         <div class="meta">
                 <p class="description">По каким правилам я формирую свой портфель ценных бумаг и почему именно так. Из каких бумаг он состоит. Каким образом эти бумаги распределены между брокерами и почему. Возможные направления развития потрфеля.</p>
-                <p> Обновлено: <time>2021-01-05</time> </p>
+                <p> Обновлено: <time>2021-01-28</time> </p>
 
         </div>
     </header>
@@ -66,10 +66,12 @@
 <li><a href="#_2">Российский фондовый рынок</a><ul>
 <li><a href="#_3">Принципы</a></li>
 <li><a href="#_4">Состав</a></li>
-<li><a href="#_5">Результаты</a></li>
 </ul>
 </li>
-<li><a href="#_6">Зарубежный фондовый рынок</a></li>
+<li><a href="#_5">Зарубежный фондовый рынок</a><ul>
+<li><a href="#_6">Результаты</a></li>
+</ul>
+</li>
 <li><a href="#_7">Распределение между брокерами</a></li>
 <li><a href="#_8">Обсуждение</a></li>
 </ul>
@@ -80,20 +82,20 @@
 <li>Бо́льшую часть времени бо́льшая часть компаний на рынке оценена справедливо. Т.е. ожидаемая долгосрочная доходность по всем бумагам, с поправкой на риск, одинакова (про размер доходности будет отдельная статья, это интересный и неочевидный вопрос).</li>
 <li>Задача портфеля — сбалансировать риск между этими компаниями, не поставив под удар эту самую среднюю долгосрочную доходность.</li>
 <li>Составить портфель только из недооценённых бумаг можно. Только это бессмысленно, если ваш капитал меньше нескольких десятков миллионов рублей: время гораздо выгоднее потратить на работу или образование, плюс вы подставляетесь под очень серьёзные психологические риски. Если ваш капитал больше — бо́льшая часть недооценённых историй для вас недоступна (слишком маленькая ликвидность), а на остальную вам уже как-то пофиг: у такого капитала и другие задачи, и другие возможности.</li>
-<li>Самый большой риск инвестора — разочароваться в портфеле и продать бумаги на низах. Надо подбирать те инстументы, в которых вы уверены и держать которые комфортно.</li>
+<li>Самый большой риск инвестора — разочароваться в портфеле и продать бумаги на низах. Надо подбирать те инструменты, в которых вы уверены и держать которые комфортно.</li>
 <li>Лучший способ инвестирования — в дешёвый сбалансированный индекс, составленный по принципам, которые вы понимаете и разделяете. Худший — выбирать компании и их доли в портфеле исходя из собственных интуитивных соображений: это и сложно, и долго, и человеческая интуиция всегда проигрывает формальным методам.</li>
 <li>На российский рынок сбалансированных индексов нет. Нужно формировать самостоятельно.</li>
 </ol>
 <h2 id="_2">Российский фондовый рынок</h2>
 <h3 id="_3">Принципы</h3>
 <ol>
-<li>Так как нет сбалансированного индексного фонда, составляем индекс самостоятельно.</li>
-<li>Выбраны все отрасли, которые на рынке представлены достаточным количеством здоровых компаний (не меньше трёх компаний в отрасли, которые прибыльны).</li>
-<li>Постарался выбрать лучшие компании в каждой отрасли, если их там много. Источники для отбора: <a href="https://arsagera.ru/analitika/emitenty/">потенциальная доходность Арсагеры</a>, <a href="https://arsagera.ru/analitika/issledovanie_korporativnogo_upravleniya_v_rossii/analiz_sostoyaniya_korporativnogo_upravleniya/">индекс качества корпоративного управления</a>, <a href="https://www.conomy.ru/">финансовая отчётность</a>, <a href="http://e-disclosure.ru/poisk-po-kompaniyam">годовые отчёты</a>, <a href="https://www.dohod.ru/ik/analytics/share">анализ мультипликаторов</a>, <a href="https://www.dohod.ru/ik/analytics/dividend">ожидаемые дивиденды, дивидендные истории, правила выплаты</a>.</li>
+<li>Так как нет сбалансированного индексного фонда, составляем индекс самостоятельно. Чтобы уменьшить количество операций, возьмём за основу БПИФ на индекс Мосбиржи (SBMX на текущий момент), а отдельными акциями будем выравнивать дисбалансы между отраслями.</li>
+<li>Берём те отрасли, которые на рынке представлены достаточным количеством здоровых компаний (не меньше трёх компаний в отрасли, которые прибыльны).</li>
+<li>Если в отрасли представлено много компаний, я постарался выбрать лучшие на мой взгляд. Источники для отбора: <a href="https://arsagera.ru/analitika/emitenty/">потенциальная доходность Арсагеры</a>, <a href="https://arsagera.ru/analitika/issledovanie_korporativnogo_upravleniya_v_rossii/analiz_sostoyaniya_korporativnogo_upravleniya/">индекс качества корпоративного управления</a>, <a href="https://www.conomy.ru/">финансовая отчётность</a>, <a href="http://e-disclosure.ru/poisk-po-kompaniyam">годовые отчёты</a>, <a href="https://www.dohod.ru/ik/analytics/share">анализ мультипликаторов</a>, <a href="https://www.dohod.ru/ik/analytics/dividend">ожидаемые дивиденды, дивидендные истории, правила выплаты</a>.</li>
 <li>Смысл предыдущего пункта — не в увеличении доходности портфеля, а в увеличении его комфортности.</li>
-<li>В портфеле 11 отраслей, стремлюсь поддерживать равную долю портфеля для каждой отрасли (по 9% примерно). Если рычночная стоимость акций отрасли сильно падает — докупаю, сильно растёт — продаю.</li>
+<li>В портфеле 11 отраслей, стремлюсь поддерживать равную долю портфеля для каждой отрасли (по 9% примерно). Доли отраслей выравниваю пополнениями. Пополнение в первую очередь направляется в наиболее отстающие отрасли. Но не более 10% от суммы пополнения в одну акцию.</li>
 <li>Внутри отрасли стремлюсь поддерживать равную <em>закупочную</em> стоимость по каждому эмитенту. В отличие от целой отрасли, отдельная акция может безвозвратно терять капитал, поэтому направлять все деньги на ребалансировку отрасли в одну такую бумагу — вредно. Так что отдельные бумаги закупаются равномерно. Если какая-то бумага на каких-то событиях неоправданно, по моим соображениям, подорожала — продаю частично, без уменьшения закупочной стоимости.</li>
-<li>Исходя из предыдущего пункта, фактические доли отдельных бумаг внутри отрасли не являются предметом планирования.</li>
+<li>Как следует из предыдущего пункта, доли отдельных бумаг внутри отрасли не являются предметом планирования.</li>
 </ol>
 <h3 id="_4">Состав</h3>
 <ul>
@@ -109,14 +111,9 @@
 <li>Нефтегаз: Лукойл, Саратовский НПЗ (преф), Газпромнефть, Газпром, Башнефть (преф), Татнефть (преф)</li>
 <li>Химия: Казаньоргсинтез, Фосагро, Нижнекамскнефтехим (преф), Акрон, Куйбышевазот (преф)</li>
 </ul>
-<h3 id="_5">Результаты</h3>
-<p>Результаты портфеля обычно оцениваю на новогодних каникулах. На графике — рублёвая стоимость моего российского портфеля (после дивидендов, комиссий и налогов), разделённая на сумму вложений/изъятий, и портфелей из акций индекса Мосбиржи и SnP500 (ETF ERUS и SPY), если покупать/продавать так же, по состоянию на конец 2018г.</p>
-<div style="width: 100%">
-  <img src="/images/perf2018.svg" style="width: 100%" />
-</div>
-
-<h2 id="_6">Зарубежный фондовый рынок</h2>
-<p>Зарубежный портфель состоит из фондов и пока ещё не устоялся. Для выбора фондов использую материалы <a href="https://etf.com">etf.com</a> и аналитику от AltaVista в торговом терминале Interactive Brokers (иначе она платная).</p>
+<h2 id="_5">Зарубежный фондовый рынок</h2>
+<p>Зарубежный портфель состоит из фондов и здесь у меня бардак из-за необразованности на момент создания. Сейчас я проблематику осознаю лучше, но ещё не доделал те исследования, которые мне необходимы чтобы сформировать действительно комфортный портфель и больше уже его не переделывать. Склоняюсь к европейским аккумулирующим фондам на макрорегионы + какая-то межотраслевая балансировка.</p>
+<p>Для выбора фондов использовал материалы <a href="https://etf.com">etf.com</a> и аналитику от AltaVista в торговом терминале Interactive Brokers (иначе она платная).</p>
 <p>Состав портфеля выглядит так (предпочтение отдавалось фундаментально-взвешенным индексам):</p>
 <ul>
 <li>акции США: SPVU, RHS, RYH, RYU, SMH</li>
@@ -125,11 +122,12 @@
 <li>недвижимость: KBWY, VNQI, SDIV</li>
 </ul>
 <p>И группы, и фонды внутри групп выравниваются по <em>рыночной</em> стоимости.</p>
-<p>График доходности портфеля не рисовал, расчёт на 31 декабря 2019г. говорит о долларовой доходности в 3,8%г (против 9,7%г у SnP500), а рублёвой, соответственно 7%г (против 13%г у SnP500).</p>
+<h3 id="_6">Результаты</h3>
+<p>Результаты портфеля обычно оцениваю на новогодних каникулах и публикую обзор в <a href="/blog">Сиюминутном</a></p>
 <h2 id="_7">Распределение между брокерами</h2>
 <ol>
 <li><a href="/notes/system">Схема тут</a>.</li>
-<li>Для зарубежного фондового рынка у меня один брокер, там 30% капитала.</li>
+<li>Для зарубежного фондового рынка у меня один брокер, там около 30% капитала с целью довести до 70, но пока:</li>
 <li>Я верю (а) в Россию, (б) в её систематическую недооценку из-за политики.</li>
 <li>И в систематическую переоценку развитых рынков из-за экономики.</li>
 <li>Все российские брокеры — это один портфель, если мне нужно продать/купить, я это делаю более-менее у кого попало без какой-либо системы (хотя если надо продавать — скорее выберу брокера у которого по этой бумаге убыток, чтобы снизить налог). Информация о состоянии сводного портфеля — у меня в скрипте для домашней бухгалтерии.</li>
@@ -137,12 +135,9 @@
 </ol>
 <h2 id="_8">Обсуждение</h2>
 <ol>
-<li>В портфеле нет облигаций. Я всё ещё в раздумьях относительно их необходимости. Пока склоняюсь к тому, что просадки лучше закрываются довложениями, чем продажей облигаций. По мере роста портфеля, конечно, баланс будет всё больше склоняться в сторону облигаций.</li>
-<li>В портфеле нет золота. И не будет. Крайне нервный актив, который десятилетиями дешевеет, а потом одномоментно <em>может быть</em> восстановит свою стоимость, когда подешевеет всё остальное. А может быть и не восстановит. Учитывая баланс производства и потребления, фундаментальная стоимость у золота отсутствует. Впрочем, фонд на корзину commodities, возможно, стоит в портфель включить.</li>
-<li>В последнее годы на Мосбирже появились относительно дешёвые фонды на индекс ММВБ. Для экономии на дивидендных налогах (российские фонды их не платят) можно на основную часть российского портфеля купить паи такого фонда, а отдельные акции докупать только для балансировки отраслей.</li>
-<li>Для той же экономии на дивидендных налогах (а также времени на написание налоговой декларации), подумываю о переходе с американских ETF на европейские, аккумулирующие дивиденды. Но этот вопрос надо изучать <em>очень</em> тщательно.</li>
+<li>В портфеле нет облигаций. Любая доля облигаций <a href="/notes/diversification_math2">снижает долгосрочную ожидаемую доходность</a>, а использовать их для снижения риска мне пока нет необходимости.</li>
+<li>В портфеле нет золота. И не будет. Хотя исторически оно и снижает риски портфеля практически без потерь в доходности, но это крайне <a href="/literacy/instruments/gold">нервный актив</a>, который десятилетиями дешевеет, а потом одномоментно <em>может быть</em> восстановит свою стоимость, когда подешевеет всё остальное. А может быть и не восстановит. Учитывая баланс производства и потребления, фундаментальная стоимость у золота отсутствует. А корзины драгметаллов и биржевых товаров в принципе не могут снизить риски портфеля из-за слишком высокой волатильности (см. ту же статью).</li>
 <li>Для балансировки базового американского индекса у меня куплены отраслевые фонды. Возможно, удобнее не покупать недостающее, а продавать в короткую излишнее.</li>
-<li>Подумываю над тем, чтобы перевести ИИС из ВТБ в Сбер, из-за очень жирной премиальной программы.</li>
 </ol>
         <img src='https://onfin.blksv.dev/end.png' loading="lazy" style='width: 0; height: 0' />
     </div>
@@ -163,7 +158,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/accounting"> &lt;&lt; Как и зачем я веду учёт личных финансов </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
+
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
