--- a/notes/myportfolio.html
+++ b/notes/myportfolio.html
@@ -68,10 +68,8 @@
 <li><a href="#_4">Состав</a></li>
 </ul>
 </li>
-<li><a href="#_5">Зарубежный фондовый рынок</a><ul>
+<li><a href="#_5">Зарубежный фондовый рынок</a></li>
 <li><a href="#_6">Результаты</a></li>
-</ul>
-</li>
 <li><a href="#_7">Распределение между брокерами</a></li>
 <li><a href="#_8">Обсуждение</a></li>
 </ul>
@@ -122,7 +120,7 @@
 <li>недвижимость: KBWY, VNQI, SDIV</li>
 </ul>
 <p>И группы, и фонды внутри групп выравниваются по <em>рыночной</em> стоимости.</p>
-<h3 id="_6">Результаты</h3>
+<h2 id="_6">Результаты</h2>
 <p>Результаты портфеля обычно оцениваю на новогодних каникулах и публикую обзор в <a href="/blog">Сиюминутном</a></p>
 <h2 id="_7">Распределение между брокерами</h2>
 <ol>
