--- a/notes/myportfolio.html
+++ b/notes/myportfolio.html
@@ -95,6 +95,16 @@
 <li>Внутри отрасли стремлюсь поддерживать равную <em>закупочную</em> стоимость по каждому эмитенту. В отличие от целой отрасли, отдельная акция может безвозвратно терять капитал, поэтому направлять все деньги на ребалансировку отрасли в одну такую бумагу — вредно. Так что отдельные бумаги закупаются равномерно. Если какая-то бумага на каких-то событиях неоправданно, по моим соображениям, подорожала — продаю частично, без уменьшения закупочной стоимости.</li>
 <li>Как следует из предыдущего пункта, доли отдельных бумаг внутри отрасли не являются предметом планирования.</li>
 </ol>
+<p>Начав покупать фонды заметил, что держание отдельных акций, хотя и очень утомительно (много расчётов, много сделок даже при простом пополнении), для меня имеет несколько психологических преимуществ:</p>
+<ol>
+<li>Я гораздо спокойнее отношусь к своему портфелю. Какая бы ни была просадка на рынке, у меня всё равно изрядная часть портфеля в плюсе.<ul>
+<li>Я часто вообще этой просадки на рынке не вижу, потому что отслеживать онлайн динамику суммы нескольких брокерских счетов невозможно (да даже и одного счёта не всегда тривиально, у того же ПСБ, у которого только квик).</li>
+<li>Я эти компании всё-таки как-то проанализировал перед включением в портфель и иногда на них посматриваю. Даже если кто-то сильно валится, есть понимание, что это не катастрофа и не надо срочно продавать.</li>
+</ul>
+</li>
+<li>Начисто пропадают мысли «пересидеть в кэше пока всё прояснится». Что-то растёт и что-то падает постоянно, поэтому никогда ничего не «проясняется». Что сильнее упало — того больше купится, что сильно выросло — того меньше. Это успокаивает.</li>
+<li>Начисто пропадают мысли «выйти в кэш». Если докупка по 50 тикерам — это необходимое зло, то вот распродажа всего этого — уже совершенно неподъёмное занятие. Как-то «таймить» с таким портфелем решительно невозможно, ни рынок в целом (запаришься продавать-покупать), ни отдельные компании (за всеми не уследишь).</li>
+</ol>
 <h3 id="_4">Состав</h3>
 <ul>
 <li>Транспорт: НКХП, Аэрофлот, НМТП, Совкомфлот</li>
