--- a/notes/digital_currencies/index.html
+++ b/notes/digital_currencies/index.html
@@ -9,9 +9,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
+        <meta name="description" content="Центробанки практически всех экономически развитых стран занялись исследованиями в области «цифровых валют». Какие задачи они хотят решить с их помощью, и чем нам всем это грозит?" />
+        <meta name="keywords" content="цифровая валюта, криптовалюта, биткойн, центральный банк, денежное обращение" />
 
 <meta property="og:locale" content="ru" />
-    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Центробанки практически всех экономически развитых стран занялись исследованиями в области «цифровых валют». Какие задачи они хотят решить с их помощью, и чем нам всем это грозит?" />
+    <meta property="og:type" content="article" />
+        <meta property="og:article:published_time" content="2020-01-28" />
+        <meta property="og:article:modified_time" content="2021-01-28" />
 <meta property="og:title" content="Цифровые валюты центральных банков" />
 <meta property="og:url" content="https://onfin.github.io/notes/digital_currencies" />
 
@@ -48,13 +53,14 @@
     <header>
         <h1>Цифровые валюты центральных банков</h1>
         <div class="meta">
-                <p> Обновлено: <time>2021-01-25</time> </p>
+                <p class="description">Центробанки практически всех экономически развитых стран занялись исследованиями в области «цифровых валют». Какие задачи они хотят решить с их помощью, и чем нам всем это грозит?</p>
+                <p> Обновлено: <time>2021-01-28</time> </p>
 
         </div>
     </header>
     <div class="content">
         <img src='https://onfin.blksv.dev/begin.png' loading="lazy" style='position:absolute; width: 0; height: 0' />
-        <p><em>Статья написана для Международной научно-практической конференции «Блокчейн технологии – 2021», г. Ижевск, УдГУ, 5-6 февраля 2021г.</em></p>
+        <p><em>Статья написана для Международной научно-практической конференции <a href="https://conf.udsu.ru/conference/bt2021">«Блокчейн технологии – 2021»</a>, г. Ижевск, УдГУ, 5-6 февраля 2021г.</em></p>
 <div class="toc">
 <ul>
 <li><a href="#_1">Введение</a></li>
@@ -83,13 +89,13 @@
 <p>Хайп вокруг криптовалют заставил центробанки присмотреться к этой форме денег как возможному следующему этапу развития технологий денежного обращения. Согласно <a href="https://www.bis.org/publ/bppdf/bispap107.pdf">исследованию</a> Банка международных расчётов, опросившего 66 центральных банков из стран, создающих в сумме 90% мирового ВВП:</p>
 <ul>
 <li>53 из них занимаются исследованиями в области цифровых валют,</li>
-<li>13 предполагают начало из выпуска в течение ближайших 5 лет, ещё 13 считают это вероятным,</li>
-<li>6 запускают пилотные проекты,</li>
+<li>13 предполагают их запуск в обращение в течение ближайших 5 лет, ещё 13 считают это вероятным,</li>
+<li>6 реализуют пилотные проекты,</li>
 <li>3 находятся в процессе тестирования.</li>
 </ul>
 <p>Не остался в стороне и Банк России, выпустивший 13 октября 2020г <a href="http://cbr.ru/StaticHtml/File/112957/Consultation_Paper_201013.pdf">консультационный доклад</a> о возможности введения в России новой формы национальный валюты — «цифрового рубля».</p>
 <p>Однако сразу стоит заметить, что <a href="/literacy/instruments/crypto">криптовалюты</a> — это скорее <em>повод</em> решить существующие проблемы денежного обращения, чем идеологическая, или даже технологическая, основа будущей системы. Задачи центральных банков довольно сильно отличаются от тех, что ставят перед собой криптоэнтузиасты.</p>
-<p>Основное внимание я уделю именно этим задачам, через которые мы придём к определяющим признакам цифровых валют, а через них — к связанным с внедрением проблем.</p>
+<p>Основное внимание я уделю именно этим задачам, через которые мы придём к определяющим признакам цифровых валют, а через них — к связанным с внедрением проблемам.</p>
 <h2 id="_2">Безналичные деньги и их проблемы</h2>
 <h3 id="_3">Децентрализованность</h3>
 <p>Основа современных безналичных денег — это децентрализованность владения и обработки транзакций:</p>
@@ -163,7 +169,7 @@
     <aside>
         <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
-            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/digital_currencies&title=Цифровые валюты центральных банков&description=None" target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/digital_currencies&title=Цифровые валюты центральных банков&description=Центробанки практически всех экономически развитых стран занялись исследованиями в области «цифровых валют». Какие задачи они хотят решить с их помощью, и чем нам всем это грозит?" target="_blank"><i class="share">&#xea9d;</i></a>
             <a href="https://t.me/share/url?url=https://onfin.github.io/notes/digital_currencies" target="_blank"><i class="share">&#xea9b;</i></a>
             <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/digital_currencies" target="_blank"><i class="share">&#xea9c;</i></a>
             <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/digital_currencies" target="_blank"><i class="share">&#xea93;</i></a>
@@ -177,7 +183,7 @@
     </main>
 
     <footer>
-
+<div class="prevupnext"><a class="prev" href="/notes/inflation"> &lt;&lt; Инфляция </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/market_to_gdp"> Рост ВВП, прибыли компаний, капитализация и доходность рынка акций &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
