--- a/notes/index.html
+++ b/notes/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Краткие заметки в систематическом порядке" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-16" />
-        <meta property="og:article:modified_time" content="2021-01-26" />
+        <meta property="og:article:modified_time" content="2021-01-28" />
 <meta property="og:title" content="Заметки о финансах" />
 <meta property="og:url" content="https://onfin.github.io/notes" />
 
@@ -82,6 +82,7 @@
 <ol>
 <li><a href="/notes/marketprice">Откуда берётся рыночная цена и доходность акций</a></li>
 <li><a href="/notes/inflation">Инфляция</a></li>
+<li><a href="/notes/digital_currencies">Цифровые валюты центральных банков</a></li>
 <li><a href="/notes/market_to_gdp">Рост ВВП, прибыли компаний, капитализация и доходность рынка акций</a></li>
 </ol>
 <h2 id="_4">Экономические этюды</h2>
