--- a/notes/inflation.html
+++ b/notes/inflation.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Что такое инфляция, её составляющие, как она измеряется, и почему это всё неправильно" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-02-01" />
-        <meta property="og:article:modified_time" content="2021-01-25" />
+        <meta property="og:article:modified_time" content="2021-01-28" />
 <meta property="og:title" content="Инфляция" />
 <meta property="og:url" content="https://onfin.github.io/notes/inflation" />
 
@@ -54,7 +54,7 @@
         <h1>Инфляция</h1>
         <div class="meta">
                 <p class="description">Что такое инфляция, её составляющие, как она измеряется, и почему это всё неправильно</p>
-                <p> Обновлено: <time>2021-01-25</time> </p>
+                <p> Обновлено: <time>2021-01-28</time> </p>
 
         </div>
     </header>
@@ -90,7 +90,7 @@
 <p>Во втором случае, рассмотрим отставание номинальных зарплат от стоимости потребительской корзины. В этом случае население вынуждено переходить на медленнее дорожающие макароны, что сдерживает регистрируемую инфляцию. Качество жизни ухудшается, но реальные зарплаты при этом вполне себе могут держаться на одном уровне. Поэтому нельзя впрямую сопоставлять реальные зарплаты с качеством жизни.</p>
 <div id="myExcelDiv2" style="width: 100%; height: 200px"></div>
 
-<script type="text/javascript" src="https://onedrive.live.com/embed?resid=180B7DCBE14D0A9B%21131&authkey=%21AFPIwNLqiZvpmTY&em=3&wdItem=%22'Sheet1'!A10%3AJ16%22&wdDivId=%22myExcelDiv2%22&wdDownloadButton=1&wdHideGridlines=1&wdActiveCell=%22'Sheet1'!A10%22&wdAllowInteractivity=0&wdAllowTyping=1"></script>
+<script async defer type="text/javascript" src="https://onedrive.live.com/embed?resid=180B7DCBE14D0A9B%21131&authkey=%21AFPIwNLqiZvpmTY&em=3&wdItem=%22'Sheet1'!A10%3AJ16%22&wdDivId=%22myExcelDiv2%22&wdDownloadButton=1&wdHideGridlines=1&wdActiveCell=%22'Sheet1'!A10%22&wdAllowInteractivity=0&wdAllowTyping=1"></script>
 
 <p>Обратите внимание, что при абсолютно идентичных ценах мы имеем разные значения ИПЦ в зависимости от структуры потребления и её динамики.</p>
 <h2 id="_2">Монетарная, немонетарная и структурная инфляция</h2>
@@ -136,7 +136,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/marketprice"> &lt;&lt; Откуда берётся рыночная цена и доходность акций </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/market_to_gdp"> Рост ВВП, прибыли компаний, капитализация и доходность рынка акций &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/notes/marketprice"> &lt;&lt; Откуда берётся рыночная цена и доходность акций </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/digital_currencies"> Цифровые валюты центральных банков &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
