--- a/calculators/index.html
+++ b/calculators/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="На странице собраны ссылки на различные мои финансовые калькуляторы." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-13" />
-        <meta property="og:article:modified_time" content="2020-07-15" />
+        <meta property="og:article:modified_time" content="2021-02-07" />
 <meta property="og:title" content="Калькуляторы" />
 <meta property="og:url" content="https://onfin.github.io/calculators" />
 
@@ -72,6 +72,7 @@
 <li>Занять и вложить</li>
 </ul>
 </li>
+<li><a href="/calculators/mortgage">Ипотека / аренда + инвестирование</a></li>
 <li><a href="/calculators/compounding">Сложный процент</a><ul>
 <li>Эффективная годовая ставка</li>
 <li>Капитал и доходность на разовое вложение</li>
