--- a/notes/index.html
+++ b/notes/index.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="Краткие заметки в систематическом порядке" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-16" />
-        <meta property="og:article:modified_time" content="2021-01-28" />
+        <meta property="og:article:modified_time" content="2021-07-15" />
 <meta property="og:title" content="Заметки о финансах" />
 <meta property="og:url" content="https://onfin.github.io/notes" />
 
@@ -91,6 +91,7 @@
 <li><a href="/notes/inflation">Инфляция</a></li>
 <li><a href="/notes/digital_currencies">Цифровые валюты центральных банков</a></li>
 <li><a href="/notes/market_to_gdp">Рост ВВП, прибыли компаний, капитализация и доходность рынка акций</a></li>
+<li><a href="/notes/trading">Легион хаотичных трейдеров</a></li>
 </ol>
 <h2 id="_4">Экономические этюды</h2>
 <ol>
