--- a/literacy/instruments/gold.html
+++ b/literacy/instruments/gold.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="Виды, специфика, риски и доходность вложений в золото. Место золота в инвестиционном портфеле. Альтернативы золоту." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-01-04" />
-        <meta property="og:article:modified_time" content="2021-02-20" />
+        <meta property="og:article:modified_time" content="2021-07-13" />
 <meta property="og:title" content="Золото" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments/gold" />
 
@@ -62,7 +62,7 @@
         <h1>Золото</h1>
         <div class="meta">
                 <p class="description">Виды, специфика, риски и доходность вложений в золото. Место золота в инвестиционном портфеле. Альтернативы золоту.</p>
-                <p> Обновлено: <time>2021-02-20</time> </p>
+                <p> Обновлено: <time>2021-07-13</time> </p>
 
         </div>
     </header>
@@ -83,9 +83,9 @@
 <h2 id="_1">Производство, потребление и историческая динамика</h2>
 <p>Начнём с самых главных <a href="https://www.gold.org/goldhub/data/demand-and-supply">фактов про золото</a>:</p>
 <ul>
-<li>потребление — 330 тонн/год и снижается (причём 2/3 обеспечивается вторичной переработкой),</li>
-<li>добыча — 3300 тонн/год (да, в 10 раз больше потребления) и растёт,</li>
-<li>запасы в хранилищах — 180.000 тонн (да, почти на шестьсот лет вперёд без учёта падения спроса и роста добычи, и на две тысячи лет вперёд, если учесть вторичную переработку).</li>
+<li>потребление <em>нового</em> золота — примерно 400 тонн/год и снижается (общее потребление примерно 1700т из которых 1300т закрываются вторичной переработкой, при этом промышленное потребление — 300т, остальное — ювелирное дело),</li>
+<li>добыча — 3500 тонн/год (да, в 8 раз больше потребностей промышленности и ювелирного дела) и растёт,</li>
+<li>запасы в хранилищах — 180.000 тонн (да, на четыреста пятьдесят лет вперёд без учёта падения спроса и роста добычи).</li>
 </ul>
 <p>Однако, часто вы можете увидеть совсем другие цифры спроса и предложения, которые говорят об их сбалансированности или даже «страшном дефиците» золота на рынке, из-за которого оно должно стоить «как никогда в истории». Связано это с тем, что (а) существует огромный рынок вторичной переработки золота, (б) существует огромный «спекулятивный» рынок золота, где его покупают и продают инвестиционные фонды, банки и центробанки. Поэтому в спрос на золото относят и спрос со вторичной переработки, и «инвестиционный» спрос, а в предложение очень часто забывают включить или одно, или другое, или сразу оба, получая «по желанию» или сбалансированность, или дефицит.</p>
 <p><a href="https://www.measuringworth.com/datasets/gold/">Стоимость золота</a>, с поправкой на инфляцию и в сравнении со <a href="https://www.quandl.com/data/BP/CRUDE_OIL_PRICES-Crude-Oil-Prices-from-1861">стоимостью нефти</a>, ведёт себя так:</p>
@@ -557,7 +557,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/instruments/bonds"> &lt;&lt; Облигации </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/instruments/realty"> Недвижимость &gt;&gt; </a></div>
+
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
