--- a/notes/contributions/index.html
+++ b/notes/contributions/index.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="Вопреки распространённому мнению, довложения в портфель увеличивают его риск в смысле неопределённости ожидаемой доходности (ну и, конечно же, никак не влияют на сам размер ожидаемой доходности)" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-06-21" />
-        <meta property="og:article:modified_time" content="2021-02-20" />
+        <meta property="og:article:modified_time" content="2021-07-13" />
 <meta property="og:title" content="Проблема довложений" />
 <meta property="og:url" content="https://onfin.github.io/notes/contributions" />
 
@@ -62,14 +62,14 @@
         <h1>Проблема довложений</h1>
         <div class="meta">
                 <p class="description">Вопреки распространённому мнению, довложения в портфель увеличивают его риск в смысле неопределённости ожидаемой доходности (ну и, конечно же, никак не влияют на сам размер ожидаемой доходности)</p>
-                <p> Обновлено: <time>2021-02-20</time> </p>
+                <p> Обновлено: <time>2021-07-13</time> </p>
 
         </div>
     </header>
     <div class="content">
         <p>Практически всегда, когда речь идёт об анализе риска и доходности различных инвестиционных инструментов или стратегий управления портфелем, смотрят только на изменение начальной суммы инвестиции, а довложения не рассматривают. Хотя очевидно, что в реальном портфеле довложения есть, и это сказывается на его динамике.</p>
 <p>Посмотрим на эту ситуацию подробнее. При этом сразу можно сказать, что довложения привносят сразу же огромное количество свободных параметров в задачу (начальный капитал, размер довложений и его динамика, интервал между довложениями, ...). Так что если кто-то хотел бы найти исследование, которое точно описывает его ситуацию, у него едва ли получится это сделать. Эта заметка не исключение, но и цель у неё другая.</p>
-<p>Для начала посмотрим на динамику портфеля с довложениями против портфеля без них (на примере истории SnP500 по <a href="http://www.econ.yale.edu/~shiller/data/ie_data.xls">данным Шиллера</a>). На протяжении 20 лет будем ежегодно вкладывать в портфель сумму, равную начальной инвестиции, индексируя её на инфляцию. Каждая линия на графике — история портфеля после такого довложения (самая нижняя — только начальная сумма). График в логарифмическом масштабе, чтобы рост/падение с любой точки графика на равное количество процентов были визуально одинаковы.</p>
+<p>Для начала посмотрим на динамику портфеля с довложениями против портфеля без них (на примере истории SnP500 по <a href="http://www.econ.yale.edu/~shiller/data/ie_data.xls">данным Шиллера</a>). На протяжении 20 лет будем ежегодно вкладывать в портфель сумму, равную начальной инвестиции, индексируя её на инфляцию.  Каждая линия на графике показывает историю изменения стоимости портфеля: самая нижняя — только начальной суммы (1$), первая — если пополнить только в первый год, вторая — в первый и второй, и т. д., последняя красная — со всеми пополнениями. График в логарифмическом масштабе, чтобы рост/падение с любой точки графика на равное количество процентов были визуально одинаковы.</p>
 <p><img src=/notes/contributions/contrib.svg style="width: 100%; height: 50wv" /></p>
 <p>Очевидно, что портфель после довложения будет в точности повторять динамику портфеля без этого довложения: расти и падать ровно на те же проценты в тот же период. Поэтому при анализе риска и доходности <em>инструментов</em> или стратегии ребалансировок нет смысла учитывать довложения. Они только исказят результаты из-за их зависимости от произвольно выбранных свободных параметров, не привнеся никакой новой информации об инструменте или стратегии.</p>
 <p>Однако, красная линия, показывающая динамику портфеля со всеми довложениями, показывает меньшие просадки и более сильный рост, за счёт всё тех же довложений. Это создаёт впечатление, что портфель с довложениями имеет меньший риск и бо́льшую доходность по крайней мере на ранних этапах, когда довложения существенны (хотя это длится очень недолго). Так ли это? Посчитаем распределение фактических доходностей портфеля с довложениями и без на 20-летнем скользящем окне.</p>
@@ -98,7 +98,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/markettiming"> &lt;&lt; Выбор времени для покупки акций </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/holywars"> О спорных терминах &gt;&gt; </a></div>
+
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
