--- a/notes/fairprice.html
+++ b/notes/fairprice.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="Какой бедой грозит регулирование цен и зачем нужно государство, если не за этим." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-24" />
-        <meta property="og:article:modified_time" content="2021-02-20" />
+        <meta property="og:article:modified_time" content="2021-07-15" />
 <meta property="og:title" content="Справедливая цена" />
 <meta property="og:url" content="https://onfin.github.io/notes/fairprice" />
 
@@ -62,7 +62,7 @@
         <h1>Справедливая цена</h1>
         <div class="meta">
                 <p class="description">Какой бедой грозит регулирование цен и зачем нужно государство, если не за этим.</p>
-                <p> Обновлено: <time>2021-02-20</time> </p>
+                <p> Обновлено: <time>2021-07-15</time> </p>
 
         </div>
     </header>
@@ -101,7 +101,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/market_to_gdp"> &lt;&lt; Рост ВВП, прибыли компаний, капитализация и доходность рынка акций </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/workersfactories"> Фабрики — рабочим &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/notes/trading"> &lt;&lt; Легион хаотичных трейдеров </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/workersfactories"> Фабрики — рабочим &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
