--- a/notes/market_to_gdp/index.html
+++ b/notes/market_to_gdp/index.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="Каким образом связны ВВП страны и рынок её акций, имеет ли смысл взвешивать страны по ВВП в мировом индексе" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-05-12" />
-        <meta property="og:article:modified_time" content="2021-02-20" />
+        <meta property="og:article:modified_time" content="2021-07-15" />
 <meta property="og:title" content="Рост ВВП, прибыли компаний, капитализация и доходность рынка акций" />
 <meta property="og:url" content="https://onfin.github.io/notes/market_to_gdp" />
 
@@ -62,7 +62,7 @@
         <h1>Рост ВВП, прибыли компаний, капитализация и доходность рынка акций</h1>
         <div class="meta">
                 <p class="description">Каким образом связны ВВП страны и рынок её акций, имеет ли смысл взвешивать страны по ВВП в мировом индексе</p>
-                <p> Обновлено: <time>2021-02-20</time> </p>
+                <p> Обновлено: <time>2021-07-15</time> </p>
 
         </div>
     </header>
@@ -154,7 +154,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/digital_currencies"> &lt;&lt; Цифровые валюты центральных банков </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/fairprice"> Справедливая цена &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/notes/digital_currencies"> &lt;&lt; Цифровые валюты центральных банков </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/trading"> Легион хаотичных трейдеров &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
