--- a/literacy/erratic_returns/index.html
+++ b/literacy/erratic_returns/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Для доходностей финансовых инструментов характерны толстые хвосты и асимметрия, а сам процесс инвестирования — неэргодичен. Наша интуиция в таких условиях работает плохо, и мы можем существенно недооценивать риски выбранных активов и стратегий." />        <meta name="keywords" content="финансовые инструменты, фондовый рынок, доходность, риск" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
 <meta property="og:url" content="https://onfin.github.io/literacy/erratic_returns" /></head>
+
 <body>
     <header>
 <nav class="menu">
@@ -33,13 +34,11 @@
                     <p> Опубликовано: <time>2021-12-01</time> </p>
                     <p>  Обновлено: <time>2021-12-05</time> </p>
 <p>Находится в:</p>
-                    <p>
                     <ul>
     <a href='/literacy#instruments'>Грамотность/Инструменты</a>
 
     </ul>
 
-                    </p>
                 </div>
             </header>
             <div class="content">                <section id="">
@@ -59,7 +58,7 @@
 </div>
 <p>От всякого вложения мы ожидаем, что оно принесёт нам некоторую доходность. Но даже если это абсолютно надёжный банковский вклад, фактическая реальная доходность всё равно будет не той, которая нам обещана: как минимум, из-за инфляции. И чем сложнее финансовый инструмент — тем больше факторов будут создавать неопределённость в его доходности. То есть, доходность финансовых инструментов можно рассматривать как случайные величины.</p>
 <p>Большинство случайных величин, с которыми мы имеем дело в материальном мире, распределены <em>нормально</em>:</p>
-<p><img src="/literacy/erratic_returns/gauss.svg"></img></p>
+<p><img src="/literacy/erratic_returns/gauss.svg"></p>
 <p>Т.е. неопределённость симметрична, все наблюдаемые значения находятся в небольшой окрестности от наиболее часто встречаемого (99,74% — в пределах ±3 стандартных отклонений), а наиболее часто встречаемое значение является одновременно и средним арифметическим по всей выборке, и её медианой. И именно такую интуицию мы часто переносим на свои ожидания от финансовых инструментов. К сожалению, она там не работает.</p>
 </section>
 <section id="fat-tails">
@@ -67,7 +66,7 @@
 <div class="meta">
 </div>
 <p>Начнём с самого «знаменитого» свойства распределений доходностей — толстых хвостов. Их ещё популяризировал Талеб под названием чёрных (и белых) лебедей.</p>
-<p><img src="/literacy/erratic_returns/fattails.svg"></img></p>
+<p><img src="/literacy/erratic_returns/fattails.svg"></p>
 <p>Вероятность реализации экстремальных доходностей — гораздо выше, чем может интуитивно казаться. Причём очень часто экстремальные доходности оказываются связаны с внеэкономическими факторами. Даже если вы умеете идеально точно рассчитывать будущие денежные потоки от инвестиции, учитывая распределения вероятностей всех возможных сценариев развития событий, всегда может случиться <em>что-то</em> непредусмотренное, которое перевернёт все ваши расчёты. И это непредусмотренное — весьма вероятно.</p>
 </section>
 <section id="neg-asy">
@@ -75,7 +74,7 @@
 <div class="meta">
 </div>
 <p>Однако толстые хвосты — это всего лишь бо́льшая неопределённость. Хуже, что «структура» этой неопределённости тоже может быть неинтуитивна. Взять например то, что распределения доходностей всех инструментов более или менее асимметричны.</p>
-<p><img src="/literacy/erratic_returns/negasy.svg"></img></p>
+<p><img src="/literacy/erratic_returns/negasy.svg"></p>
 <p>Отрицательная асимметрия — это когда вы в большинстве случаев получаете высокую доходность, но иногда случаются события/периоды, которые разрушают ваш капитал.</p>
 <p>Такое распределение доходностей характерно для проданных опционов (и, соответственно, структурных продуктов на их основе), некоторых трендовых стратегий, выбора «недооценённых» акций. Спорить со сторонниками этих подходов практически невозможно: пока не случилось экстремального события, они с очень убедительными цифрами в руках доказывают свою правоту. А экстремального события может не случаться очень долго.</p>
 <p>Особенно подло отрицательная асимметрия обходится с покупателями структурных продуктов. Модальные (т.е. наиболее часто реализующиеся) доходности бывают настолько велики, что продавцы структурных продуктов могут закладывать в них просто невообразимые комиссии. Скажем, при модальной доходности некоторой стратегии в 30%г, толстый левый хвост приводит к тому, что мат.ожидание её доходности — всего 5%г. Продавец структурного продукта, в который эта стратегия завёрнута, будет вам предлагать его с доходностью 15%г. Ваша ожидаемая доходность будет минус 10%г, но вы <em>почти всегда</em> будете видеть +15, пока однажды не потеряете <em>почти все</em> вложенные деньги. А продавец на этом имеет свои 15%г безрисковой доходности на <em>ваши</em> вложения.</p>
@@ -85,7 +84,7 @@
 <h2><a href="/literacy/erratic_returns#pos-asy">Положительная асимметрия<i class=share>&#xe9cb;</i></a></h2>
 <div class="meta">
 </div>
-<p><img src="/literacy/erratic_returns/posasy.svg"></img></p>
+<p><img src="/literacy/erratic_returns/posasy.svg"></p>
 <p>Противоположный случай. В большинстве случаев вы получаете доходность ниже среднего (или вообще теряете деньги), но иногда — резко наращиваете капитал.</p>
 <p>Такое распределение характерно для купленных опционов, отдельных акций (особенно «акций роста», но! не рынка акций в целом), облигаций и золота.</p>
 <p>Здесь мы можем встретить другую когорту «одураченных бэктестером». Если сторонники стратегий с отрицательной асимметрией напирают на то, что очень высокая доходность получалась <em>почти всегда</em> (и неважно, что происходит с капиталом, когда высокая доходность <em>не получилась</em>), то сторонники стратегий с положительной — на высокую <em>среднюю/среднеисторическую</em> доходность (и неважно, что получилась она за счёт одного-двух событий/периодов, между которыми два поколения инвесторов и сплошные убытки).</p>
@@ -97,7 +96,7 @@
 </div>
 <p>Говоря о среднеисторических доходностях не стоит забывать также, что рынки нестационарны: изменяются люди, изменяется среда, изменяются правила. Рынки постоянно учитывают новую информацию, в том числе и о функционировании самих рынков. Поэтому активы/стратегии, которые показывали хорошую доходность в прошлом, не обязательно покажут её в будущем. И наоборот.</p>
 <p>На картинке ниже можно увидеть среднюю за 25 лет премию американских дивидендных акций к широкому рынку (т.е. на сколько %г они его опередили за это время). Налицо устойчивый тренд к её снижению с середины 80-х. Да, исторически дивидендные акции опережали рынок на 2%г в среднем (до налогов) — это вам покажет любой бэктестер. Только вот в XXI веке на такую премию рассчитывать уже не стоит: рынок стал умнее.</p>
-<p><img src="/literacy/erratic_returns/nonstat.svg"></img></p>
+<p><img src="/literacy/erratic_returns/nonstat.svg"></p>
 </section>
 <section id="non-ergo">
 <h2><a href="/literacy/erratic_returns#non-ergo">Неэргодичность<i class=share>&#xe9cb;</i></a></h2>
@@ -105,14 +104,14 @@
 <div>
         Обновления:
         <ul>
-                <li>2021-12-05: Врезка с объяснением математики этого эффекта</li>
+                <li>2021-12-05: Врезка с объяснением математики</li>
         </ul>
         </div>
 </div>
 <p>Пожалуй, самое скандальное свойство инвестиционных стратегий.</p>
 <p>Пусть вам предлагают сыграть в орлянку. Орёл — вы получаете 50% от ставки, решка — теряете 40%. В каждой отдельной партии ваша ожидаемая доходность 0.5×+50% + 0.5×-40% = +5%. Если вы разделите свой капитал на, скажем, 1000 частей и сыграете 1000 параллельных партий, то ваш результат будет где-то очень близко к этим +5%.</p>
 <p>Однако. Если вы начнёте играть <em>последовательно</em>, каждый раз ставя весь свой капитал, то, скорее всего, останетесь в итоге ни с чем. Вот так выглядят возможные траектории вашего капитала в этой игре:</p>
-<p><img src="/literacy/erratic_returns/nonergo.svg"></img></p>
+<p><img src="/literacy/erratic_returns/nonergo.svg"></p>
 <p>А всё потому, что проигрыши разрушают ваш капитал быстрее, чем выигрыши его восстанавливают: 0.6×1.5 = 0.9 &lt; 1. Чтобы такая игра начала приносить доход, вам нужно либо заметно увеличить размер выигрыша, либо его вероятность (или и то, и другое).</p>
 <div class="sidenote">
 <p>Чуть подробнее как это работает.</p>
@@ -136,10 +135,19 @@ s-225.272,467,-225.272,467s-235,486,-235,486c-2.7,4.7,-9,7,-19,7
 c-6,0,-10,-1,-12,-3s-194,-422,-194,-422s-65,47,-65,47z
 M834 80h400000v40h-400000z'/></svg></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.08390500000000001em;"><span></span></span></span></span></span><span class="mclose delimcenter" style="top:0em;"><span class="delimsizing size2">)</span></span></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:1.3812309999999999em;"><span style="top:-3.6029em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight" style="margin-right:0.10903em;">N</span></span></span></span></span></span></span></span><span class="mspace" style="margin-right:0.2777777777777778em;"></span><span class="mrel">≈</span><span class="mspace" style="margin-right:0.2777777777777778em;"></span></span><span class="base"><span class="strut" style="height:0.8913309999999999em;vertical-align:0em;"></span><span class="mord">0</span><span class="mord">.</span><span class="mord">9</span><span class="mord"><span class="mord">5</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8913309999999999em;"><span style="top:-3.113em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight" style="margin-right:0.10903em;">N</span></span></span></span></span></span></span></span><span class="mord">.</span></span></span></span></span></span>
 Т.е. <strong>в каждой партии</strong> вы будете проигрывать в среднем 5% капитала.</p>
+<div class="todo" id="zDSpy3l5qxc">
+<p><i class='share'><a href='/literacy/erratic_returns#zDSpy3l5qxc'>&#xe902;</a></i>Здесь проглядывает параллель с <a href="/notes/rebalance_bonus#drag">потерями на волатильности</a>
+        <button class='link-meta-anchor'><strong>i</strong></button>
+        <span class='link-meta'>
+            <span class='header'>Бонус за ребалансировку и потери на волатильности (физмат-этюд)/Потери на волатильности</span>
+            <span class='description'>Математический вывод величины отставания ср.-геом. доходности от ср.-арифм. в зависимости от СКО периодических доходностей.</span>
+        </span>, но какая-то шаткая. Надо бы её прояснить.</p>
+</div>
 </div>
 <p>Какое отношение эта орлянка имеет к инвестициям?</p>
 <p>Если у вас широко диверсифицированный портфель, который вы просто держите, то это эквивалентно множеству параллельных партий, играемых в один раунд. Итоговый результат будет очень близок к математическому ожиданию доходности одной партии, каким бы ни было распределение её вероятностей. Т.е. даже если 70% «партий» вы проигрываете в ноль, но доходность оставшихся достаточна, чтобы мат.ожидание было положительным, то, при достаточном количестве независимых объектов инвестирования, ваша итоговая доходность, скорее всего, окажется положительной.</p>
-<p>Однако, если вы занимаетесь выбором отдельных акций, выбором времени входа-выхода, срочным рынком или его аналогами, то вы <em>неизбежно</em> втягиваетесь в очень длинную серию одиночных (или почти одиночных) партий. И даже если и вероятность успеха, и ожидаемая доходность каждой партии гораздо выше, чем в случае просто широкой диверсификации и удержания позиции «до конца», то всего лишь один неблагоприятный исход в длинной последовательности партий может очень сильно испортить ваш результат. А чем длиннее серия — тем выше вероятность поймать в ней такой исход.</p>
+<p>Однако, если вы занимаетесь выбором отдельных акций,
+выбором времени входа-выхода, срочным рынком или его аналогами, то вы <em>неизбежно</em> втягиваетесь в очень длинную серию одиночных (или почти одиночных) партий. И даже если и вероятность успеха, и ожидаемая доходность каждой партии гораздо выше, чем в случае просто широкой диверсификации и удержания позиции «до конца», то всего лишь один неблагоприятный исход в длинной последовательности партий может очень сильно испортить ваш результат. А чем длиннее серия — тем выше вероятность поймать в ней такой исход.</p>
 <p>Я не удивлюсь, если окажется, что <a href="/notes/active_results">плохие результаты активных управляющих</a>
         <button class='link-meta-anchor'><i class="share">&#xe901;</i></button>
         <span class='link-meta'>
