--- a/notes/active_results/index.html
+++ b/notes/active_results/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Список источников по результатам активного управления с краткими выписками и комментариями." />        <meta name="keywords" content="фондовый рынок, активное управление, доходность, риск" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
 <meta property="og:url" content="https://onfin.github.io/notes/active_results" /></head>
+
 <body>
     <header>
 <nav class="menu">
@@ -32,13 +33,13 @@
                 <div class="meta"><p class=summary>Список источников по результатам активного управления с краткими выписками и комментариями.</p>
                     <p> Опубликовано: <time>2021-11-29</time> </p>
 <p>Находится в:</p>
-                    <p>
                     <ul>
     <a href='/pages/sources'>Источники</a>
 
+    <a href='/notes#portfolio'>Заметки о финансах/Инвестиционный портфель</a>
+
     </ul>
 
-                    </p>
                 </div>
             </header>
             <div class="content">                <section id="">
@@ -83,6 +84,9 @@
 <table>
 <p><tbody><tr ><td ></td><td > 1 год </td><td > 3 года </td><td > 5 лет</td></tr><tr ><td > США </td><td > 64% </td><td > 79%</td><td > 82%</td></tr><tr ><td > Канада </td><td > 77% </td><td > 94% </td><td > 90%</td></tr><tr ><td >Мексика </td><td > 42% </td><td > 89% </td><td > 86%</td></tr><tr ><td >Бразилия</td><td > 56% </td><td > 85% </td><td > 84%</td></tr><tr ><td >Чили </td><td > 60% </td><td > 86% </td><td > 81%</td></tr><tr ><td >Европа</td><td > 85% </td><td > 86% </td><td > 80%</td></tr><tr ><td >ЮАР </td><td > 34% </td><td > 85% </td><td > 91%</td></tr><tr ><td >Индия </td><td > 92% </td><td > 91% </td><td > 58%</td></tr><tr ><td >Япония </td><td > 84% </td><td > 57% </td><td > 59%</td></tr><tr ><td >Австралия </td><td > 87% </td><td > 86% </td><td > 80%</td></tr></tbody></p>
 </table>
+<div class="todo" id="XEzlhhJpQUc">
+<p><i class='share'><a href='/notes/active_results#XEzlhhJpQUc'>&#xe902;</a></i>Надо дополнить таблицу до 15 лет, где результаты ещё печальнее.</p>
+</div>
 </section>
 <section id="vanguard">
 <h2><a href="/notes/active_results#vanguard">Vanguard<i class=share>&#xe9cb;</i></a></h2>
@@ -104,6 +108,7 @@
                     </div>
                     <div class="up">
                         <span> &uarr; <a href='/pages/sources'> Источники</a> &uarr; </span>
+                        <span> &uarr; <a href='/notes#portfolio'> Заметки о финансах/Инвестиционный портфель</a> &uarr; </span>
                     </div>
             </div>
             <aside style='display: flex'>
