--- a/pages/sources.html
+++ b/pages/sources.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Источники экономической и финансовой информации, которыми я пользуюсь и всем рекомендую. Обзоры банковских карт, надёжность банков, отчётность компаний, дивиденды, макроэкономическая статистика, и просто очень дельные фундаментальные тексты." />        <meta name="keywords" content="банки, карты, вклады, кэшбэк, надёжность, отчётность компаний, дивиденды, макроэкономика, статистика, личные финансы, инвестиции" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
 <meta property="og:url" content="https://onfin.github.io/pages/sources" /></head>
+
 <body>
     <header>
 <nav class="menu">
@@ -59,6 +60,7 @@
 </div>
 <ul>
 <li><a href="https://capital-gain.ru/course/">Курс от Дмитрия Никитенко</a>. Пока неоконченный, но уже внушающий огромное уважение очень детальной проработкой статей. Обещает стать лучшим источником по данной теме на русском языке.</li>
+<li><a href="https://rationalanswer.club/post/56/">Курс от Ильи Рослякова</a>. Обзорный, но весьма подробный, материал с практическим уклоном.</li>
 <li><a href="https://fintraining.livejournal.com/">Сергей Спирин</a>. Столп народного просвещения, цикл «Введение в инвестиции» (список в левой колонке сайта) к прочтению обязателен.</li>
 <li><a href="https://assetallocation.ru/quick-start/">Статьи и брошюры</a> об основах портфельного инвестирования, собранные им же.</li>
 <li><a href="https://journal.tinkoff.ru/shepelev/">Статьи Евгения Шепелева в Тинькоф-Журнале</a>. Преимущественно подробные ответы на распространённые вопросы новичков.</li>
